fix hamburger z-index when nav is open
broke on last commit. All better now

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -66,7 +66,7 @@ section {
 
 .nav-trigger {
   position: fixed;
-  z-index: 100;
+  z-index: 1100;
   $spcr: calc(1rem + 1.2vw);
   top: 1.9rem;
   left: 2rem;
